# fractalartmaker

./: README.md  pyproject.toml
src/fractalartmaker/: __init__.py  __main__.py
